--- a/BlazorTool.Client/Pages/Login.razor
+++ b/BlazorTool.Client/Pages/Login.razor
@@ -18,7 +18,7 @@
                              ValueField="Name"
                              @bind-Value="@Username"
                              Placeholder="@Localizer["Login_SelectUserName"]"
-                             Filterable="false"
+                             Filterable="true"
                              AllowCustom="false"
                              
                              Width="100%">
